--- a/.github/workflows/nexus.yml
+++ b/.github/workflows/nexus.yml
@@ -68,5 +68,5 @@ jobs:
         format: raw
         repository: launcher
         coordinates: directory=/
-        assets: filename=launchers-electron.7z
-        filename: dist/Flashpoint.7z
+        assets: filename=launchers-electron.zip
+        filename: dist/Flashpoint.zip
