--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "follow-redirects": "1.14.8",
     "fs-extra": "8.1.0",
     "mime": "2.4.4",
+    "minimist": "^1.2.7",
     "node-7z": "1.1.1",
     "ps-tree": "1.2.0",
     "react": "17.0.2",
@@ -81,6 +82,7 @@
     "@types/fs-extra": "8.1.0",
     "@types/jest": "27.5.1",
     "@types/mime": "2.0.1",
+    "@types/minimist": "^1.2.2",
     "@types/node": "14.14.31",
     "@types/ps-tree": "1.1.2",
     "@types/react": "17.0.2",
