--- a/.github/workflows/nexus.yml
+++ b/.github/workflows/nexus.yml
@@ -59,6 +59,17 @@ jobs:
       with:
         name: zip-artifact
         path: dist/
+    - name: Deploy to Nexus
+      uses: sonatype-nexus-community/nexus-repo-github-action@master
+      with:
+        serverUrl: https://nexus-dev.unstable.life
+        username: admin
+        password: ${{ secrets.NEXUS_PASSWORD }}
+        format: raw
+        repository: launcher
+        coordinates: directory=/
+        assets: filename=core-launcher.zip
+        filename: dist/Flashpoint.zip
     - name: Generate Metadata
       run: |
         sudo apt install libarchive-zip-perl -y
@@ -77,17 +88,8 @@ jobs:
             "install-size": $install,
             "crc32": $hash 
           }' > metadata.json
-    - name: Deploy File to Nexus
-      uses: sonatype-nexus-community/nexus-repo-github-action@master
-      with:
-        serverUrl: https://nexus-dev.unstable.life
-        username: github
-        password: ${{ secrets.NEXUS_PASSWORD }}
-        format: raw
-        repository: components
-        coordinates: directory=/
-        assets: filename=core-launcher.zip
-        filename: dist/Flashpoint.zip
+        ls -la
+        cat metadata.json
     - name: Deploy Metadata to Nexus
       uses: sonatype-nexus-community/nexus-repo-github-action@master
       with:
