--- a/.github/workflows/nexus.yml
+++ b/.github/workflows/nexus.yml
@@ -66,7 +66,7 @@ jobs:
         username: admin
         password: ${{ secrets.NEXUS_PASSWORD }}
         format: raw
-        repository: launcher
+        repository: components
         coordinates: directory=/
         assets: filename=core-launcher.zip
         filename: dist/Flashpoint.zip
