refactor: Various linting and updates

--- a/package.json
+++ b/package.json
@@ -96,19 +96,20 @@
     "@types/uuid-validate": "0.0.1",
     "@types/which": "1.3.2",
     "@types/ws": "6.0.3",
-    "@typescript-eslint/eslint-plugin": "3.3.0",
-    "@typescript-eslint/parser": "3.3.0",
+    "@typescript-eslint/eslint-plugin": "5.51.0",
+    "@typescript-eslint/parser": "5.51.0",
     "cargo-cp-artifact": "^0.1",
     "chokidar": "^3.5.3",
     "coveralls": "3.1.0",
     "cross-env": "7.0.2",
     "electron": "19.1.9",
     "electron-builder": "23.6.0",
-    "eslint": "7.2.0",
-    "eslint-plugin-only-warn": "1.0.2",
-    "eslint-plugin-react": "7.30.1",
+    "eslint": "8.33.0",
+    "eslint-plugin-only-warn": "1.1.0",
+    "eslint-plugin-react": "7.32.2",
     "gulp": "4.0.2",
     "jest": "28.1.0",
+    "lefthook": "^1.2.8",
     "swc-loader": "0.2.3",
     "ts-jest": "28.0.3",
     "ts-loader": "9.4.1",
