--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -24,8 +24,7 @@
   ],
   "plugins": [
     "react",
-    "@typescript-eslint",
-    "only-warn"
+    "@typescript-eslint"
   ],
   "settings": {
     "react": {
@@ -35,7 +34,7 @@
   "root": true,
   "rules": {
     "@typescript-eslint/adjacent-overload-signatures": "off",
-    "@typescript-eslint/ban-types": ["warn", {
+    "@typescript-eslint/ban-types": ["error", {
       "types": {
         "{}": false
       },
@@ -43,88 +42,90 @@
     }],
     "@typescript-eslint/explicit-function-return-type": "off",
     "@typescript-eslint/explicit-module-boundary-types": "off",
-    "@typescript-eslint/indent": ["warn", 2, { 
+    "@typescript-eslint/indent": ["error", 2, { 
       "MemberExpression": 0,
       "SwitchCase": 1
     }],
-    "@typescript-eslint/no-empty-function": ["warn", { "allow": ["arrowFunctions"] }],
+    "@typescript-eslint/no-empty-function": ["error", { "allow": ["arrowFunctions"] }],
     "@typescript-eslint/no-explicit-any": "off",
-    "@typescript-eslint/no-invalid-void-type": ["warn", { "allowInGenericTypeArguments": true }],
+    "@typescript-eslint/no-invalid-void-type": ["error", { "allowInGenericTypeArguments": true }],
     "@typescript-eslint/no-namespace": "off",
-    "@typescript-eslint/no-unused-vars": ["warn", {
+    "@typescript-eslint/no-unused-vars": ["error", {
       "vars": "all",
       "args": "none"
     }],
     "@typescript-eslint/no-use-before-define": "off",
     "@typescript-eslint/prefer-interface": "off",
-    //"react/no-access-state-in-setstate": "warn", (requires restructuring of "app.tsx")
-    "react/no-direct-mutation-state": "warn",
-    "react/no-render-return-value": "warn",
-    "react/no-string-refs": "warn",
-    "react/no-unescaped-entities": ["warn", {"forbid": [{
+    //"react/no-access-state-in-setstate": "error", (requires restructuring of "app.tsx")
+    "react/no-direct-mutation-state": "error",
+    "react/no-render-return-value": "error",
+    "react/no-string-refs": "error",
+    "react/no-unescaped-entities": ["error", {"forbid": [{
       "char": ">",
       "alternatives": ["&gt;"]
     }, {
       "char": "}",
       "alternatives": ["&#125;"]
     }]}],
-    "react/no-unused-prop-types": "warn",
-    "react/no-unused-state": "warn",
+    "react/no-unused-prop-types": "error",
+    "react/no-unused-state": "error",
     "react/react-in-jsx-scope": "off",
-    "curly": ["warn", "all"],
-    "eol-last": "warn",
-    "for-direction": "warn",
-    "getter-return": "warn",
-    "keyword-spacing": "warn",
-    "no-compare-neg-zero": "warn",
-    "no-cond-assign": "warn",
-    "no-constant-condition": ["warn", { "checkLoops": false }],
+    "react/display-name": "off",
+    "curly": ["error", "all"],
+    "eol-last": "error",
+    "for-direction": "error",
+    "getter-return": "error",
+    "keyword-spacing": "error",
+    "no-compare-neg-zero": "error",
+    "no-cond-assign": "error",
+    "no-constant-condition": ["error", { "checkLoops": false }],
     "no-control-regex": "off",
-    "no-debugger": "warn",
-    "no-delete-var": "warn",
-    "no-dupe-args": "warn",
-    "no-dupe-keys": "warn",
-    "no-duplicate-case": "warn",
-    "no-empty": "warn",
-    "no-empty-character-class": "warn",
-    "no-empty-pattern": "warn",
-    "no-ex-assign": "warn",
-    "no-extra-boolean-cast": "warn",
-    "no-extra-semi": "warn",
-    "no-func-assign": "warn",
-    "no-global-assign": "warn",
+    "no-debugger": "error",
+    "no-delete-var": "error",
+    "no-dupe-args": "error",
+    "no-dupe-keys": "error",
+    "no-duplicate-case": "error",
+    "no-empty": "error",
+    "no-empty-character-class": "error",
+    "no-empty-pattern": "error",
+    "no-ex-assign": "error",
+    "no-extra-boolean-cast": "error",
+    "no-extra-semi": "error",
+    "no-func-assign": "error",
+    "no-global-assign": "error",
     "no-inner-declarations": "off",
-    "no-invalid-regexp": "warn",
-    "no-irregular-whitespace": "warn",
-    "no-mixed-spaces-and-tabs": "warn",
-    "no-obj-calls": "warn",
-    "no-octal": "warn",
-    "no-prototype-builtins": "warn",
-    "no-redeclare": "warn",
-    "no-regex-spaces": "warn",
-    "no-self-assign": "warn",
-    "no-shadow-restricted-names": "warn",
-    "no-spaced-func": "warn",
-    "no-sparse-arrays": "warn",
-    "no-trailing-spaces": "warn",
-    "no-unexpected-multiline": "warn",
-    "no-unreachable": "warn",
-    "no-unsafe-finally": "warn",
-    "no-unsafe-negation": "warn",
-    "no-unused-labels": "warn",
-    "no-useless-catch": "warn",
-    "no-useless-escape": "warn",
-    "no-whitespace-before-property": "warn",
-    "no-with": "warn",
-    "quotes": ["warn", "single"],
-    //"require-atomic-updates": "warn", (requires restructuring of "recursiveDirectory()")
-    "semi": ["warn", "always"],
-    "space-before-blocks": "warn",
-    "space-unary-ops": "warn",
-    "spaced-comment": "warn",
-    "use-isnan": "warn",
-    "valid-typeof": "warn",
-    "wrap-iife": "warn",
-    "yoda": "warn"
+    "no-invalid-regexp": "error",
+    "no-irregular-whitespace": "error",
+    "no-mixed-spaces-and-tabs": "error",
+    "no-obj-calls": "error",
+    "no-octal": "error",
+    "no-prototype-builtins": "error",
+    "no-redeclare": "off",
+    "@typescript-eslint/no-redeclare": "error",
+    "no-regex-spaces": "error",
+    "no-self-assign": "error",
+    "no-shadow-restricted-names": "error",
+    "no-spaced-func": "error",
+    "no-sparse-arrays": "error",
+    "no-trailing-spaces": "error",
+    "no-unexpected-multiline": "error",
+    "no-unreachable": "error",
+    "no-unsafe-finally": "error",
+    "no-unsafe-negation": "error",
+    "no-unused-labels": "error",
+    "no-useless-catch": "error",
+    "no-useless-escape": "error",
+    "no-whitespace-before-property": "error",
+    "no-with": "error",
+    "quotes": ["error", "single"],
+    //"require-atomic-updates": "error", (requires restructuring of "recursiveDirectory()")
+    "semi": ["error", "always"],
+    "space-before-blocks": "error",
+    "space-unary-ops": "error",
+    "spaced-comment": "error",
+    "use-isnan": "error",
+    "valid-typeof": "error",
+    "wrap-iife": "error",
+    "yoda": "error"
   }
 }
