--- a/qodana.yaml
+++ b/qodana.yaml
@@ -3,4 +3,5 @@ linter: jetbrains/qodana-js:2022.3-eap
 exclude:
   - name: All
     paths:
-      - src/database/migration
+      - src/database/migration#
+  - name: JSXNamespaceValidation
