--- a/.github/workflows/qodana.yml
+++ b/.github/workflows/qodana.yml
@@ -15,6 +15,21 @@ jobs:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
+      - name: Use Node.js 18.x
+        uses: actions/setup-node@v3
+        with:
+          node-version: 18
+      - uses: actions/cache@v2
+        id: cache
+        with:
+          path: |
+            **/node_modules
+          key: ${{ runner.os }}-${{ hashFiles('package.json') }}
+      - name: Install Dependencies
+        run: npm install --force
+        if: steps.cache.outputs.cache-hit != 'true'
+        env:
+          CI: true
       - name: 'Qodana Scan'
         uses: JetBrains/qodana-action@v2022.3.2
         env:
