chore: Enable more Qodana inspections

--- a/qodana.yaml
+++ b/qodana.yaml
@@ -6,3 +6,13 @@ exclude:
       - src/database/migration
       - static
   - name: JSXNamespaceValidation
+include:
+  - name: TrivialIfJS
+  - name: ES6RedundantAwait
+  - name: ES6MissingAwait
+  - name: DefaultNotLastCaseInSwitchJS
+  - name: RedundantSuppression
+  - name: ProblematicWhitespace
+  - name: BlockStatementJS
+  - name: NegatedIfStatementJS
+  - name: ConfusingPlusesOrMinusesJS
