--- a/.github/workflows/qodana.yml
+++ b/.github/workflows/qodana.yml
@@ -31,6 +31,8 @@ jobs:
         env:
           CI: true
       - name: 'Qodana Scan'
-        uses: JetBrains/qodana-action@v2022.3.2
+        uses: JetBrains/qodana-action@v2022.3.3
+        with:
+          args: --baseline,qodana.sarif.json
         env:
           QODANA_TOKEN: ${{ secrets.QODANA_TOKEN }}
