--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "yaml": "2.1.0"
   },
   "devDependencies": {
+    "@kayahr/jest-electron-runner": "^29.3.1",
     "@swc/cli": "0.1.61",
     "@swc/core": "1.3.35",
     "@types/better-sqlite3": "7.5.0",
@@ -109,10 +110,10 @@
     "eslint-plugin-only-warn": "1.1.0",
     "eslint-plugin-react": "7.32.2",
     "gulp": "4.0.2",
-    "jest": "28.1.0",
+    "jest": "29.4.2",
     "lefthook": "^1.2.8",
     "swc-loader": "0.2.3",
-    "ts-jest": "28.0.3",
+    "ts-jest": "29.0.5",
     "ts-loader": "9.4.1",
     "ts-node": "10.8.0",
     "ts-transform-paths": "^2.0.3",
